<resources>
    <string name="app_name">Ordenapp</string>
    <string name="action_settings">Settings</string>
    <string name="title">Agregar Orden</string>
    <string name="plus">"+"</string>
    <string name="adduser">"Agregar Orden"</string>
    <string name="user">"Datos de la Orden"</string>
    <string name="description">"Introduzca descripción de la Orden"</string>
    <string name="customer">"Introduzca el cliente"</string>
    <string name="address">"Dirección"</string>
    <string name="numero">"Numero domicilio"</string>
    <string name="city">"Ciudad"</string>
    <string name="phone">"Teléfono"</string>
    <string name="email">"Email"</string>
    <string name="save">"Grabar"</string>
    <string name="cancel">"Cancelar"</string>
    <string name="adduseractivitylabel">"Add User Activity"</string>
    <string name="scan">Scan</string>
    <string name="titled">Agregar Dispositivos</string>
    <string name="pedidopen">Pedidos Pendientes</string>
    <string name="terminar">Terminar</string>
    <string name="disp">Dispositivos Instalados</string>
    <string name="Dispositivos">Agregar Dispositivo</string>
    <string name="codigo">Introduzca Código</string>
    <string name="nomb">Descripción</string>
    <string name="descrip_disp">Ítem</string>
    <string name="comments">Describir la intervención</string>
    <string name="Bitacora">Bitácora</string>
    <string name="Evidencia">Evidencia\nfotográfica</string>
    <string name="Moddip">Modificar Dispositivos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cam">Galeria</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Ordenapp_news</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to Ordenapp_news topic</string>
    <string name="fcm_message">Mensaje de Ordenapp</string>
    <string name="direcci_n">Dirección:</string>
    <string name="hora_de_ninstalacion">Hora de \ninstalación</string>
    <string name="tiempo_nestimado">Tiempo \nestimado</string>
    <string name="categoria_n">Categoría\n</string>
    <string name="descripci_n">Descripción:</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="detalles_de_la_orden">DETALLES DE LA ORDEN</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="garantia">Garantia</string>
    <string name="observaciones_generales">Observaciones Generales</string>
    <string name="firme_en_el_recuadro">Firme en el recuadro</string>
    <string name="comentarios">Comentarios</string>
</resources>
