<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingTop="1dp" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/codigo"
            android:textColor="#bf0404"
            android:textSize="18dp"
            android:textIsSelectable="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView12"
            android:layout_toEndOf="@+id/textView12">
            <requestFocus />

        </TextView>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modificar"
            android:id="@+id/btagr"
            android:onClick="moddisp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:onClick="canceldisp"
            android:id="@+id/button3"
            android:layout_alignBottom="@+id/btagr"
            android:layout_toRightOf="@+id/btagr"
            android:layout_toEndOf="@+id/btagr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Codigo:   "
            android:id="@+id/textView12"
            android:layout_above="@+id/nomdisp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nomdisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/nomb"
            android:layout_below="@+id/codigo"
            android:layout_toRightOf="@+id/textView13"
            android:layout_toEndOf="@+id/textView13"
            android:layout_marginTop="16dp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre:  "
            android:id="@+id/textView13"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/nomdisp"
            android:layout_alignBottom="@+id/nomdisp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/descrip_disp"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/nomdisp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="descripcion">

        </EditText>


        <Button android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_alignBaseline="@+id/descripcion"
            android:layout_alignBottom="@+id/descripcion"
            android:layout_toRightOf="@+id/descripcion"
            android:layout_toEndOf="@+id/descripcion"
            />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc0000"
        android:padding="5dp"
        android:text="@string/Moddip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />


</LinearLayout>